@@ -6,6 +6,7 @@
 - Visual interface for managing voucher rewards
 - Save and clear functionality in voucher GUI
 - Automatic item distribution when redeeming vouchers
+- /xdv vlist command to list all vouchers
 
 ### Changed
 - Enhanced voucher system to support physical item rewards
